# StrategyForge-Core

./: Cargo.toml  README.md
docs/design/: art_style_guide.md  building_types.md  core_gameplay.md  narrative_elements.md  resource_system.md  sound_design.md  ui_ux_design.md  unit_types.md
docs/gameplay/: technology.md
docs/menus/: dialogs_and_notifications.md  hud.md  main_menu.md  settings_menu.md
docs/technical/: architecture.md
src/: camera.rs  camera_controls.rs  example_plugin.rs  lib.rs  main.rs  menu.rs  plugin.rs  state.rs
src/campaign_menu/: faction.rs
src/resources/: mod.rs  nodes.rs  storage.rs  types.rs
src/ui/: campaign.rs  components.rs  loading.rs  mod.rs  styles.rs  theme.rs  utils.rs
src/ui/main_menu/: components.rs  mod.rs  systems.rs
src/ui/settings/: components.rs  mod.rs  styles.rs  systems.rs
src/world/: border.rs  generation.rs  mod.rs  render.rs  resource_types.rs  resources.rs  save.rs  terrain_render.rs
