[package]
name = "strategyforge-core"
version = "0.1.0"
edition = "2021"
description = "Core game engine and systems for StrategyForge"
license = "MIT"

[dependencies]
bevy = { workspace = true, features = ["bevy_ui", "bevy_state"] }
bevy_reflect = { version = "0.14", features = ["bevy"] }
thiserror = "1.0"
dyn-clone = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
sf-plugin-template = { path = "../sf-plugin-template" }
sf-settings-menu = { path = "../sf-settings-menu" }
sf-campaign-menu = { path = "../sf-campaign-menu" }

[lib]
name = "strategyforge_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "strategyforge-core-bin"
path = "src/main.rs"

[features]
default = []
debug = []

[profile.dev]
opt-level = 1  # Faster debug builds with some optimizations

[profile.release]
lto = true      # Link-time optimization
codegen-units = 1  # Better optimization, slower build
