[package]
name = "strategyforge-core"
version = "0.1.0"
edition = "2021"
description = "Core game engine and systems for StrategyForge"
license = "MIT"

[[bin]]
name = "strategyforge-core"
path = "src/main.rs"

[dependencies]
# Bevy - Using workspace version with its features
bevy = { workspace = true }

# UI and Plugins - Use workspace versions to ensure compatibility
bevy_egui = { workspace = true }
egui = { workspace = true }
bevy-inspector-egui = { workspace = true, default-features = false }

# Core Dependencies
rand = "0.8.5"
thiserror = { workspace = true }
dyn-clone = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
libloading = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ron = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
winit = { workspace = true }

[features]
# Default features for the game
default = ["debug"]

# Debug features (only enabled in debug builds)
debug = [
    # No additional debug features to minimize binary size
]

# Release features (only enabled in release builds)
release = [
    # No additional release features
]

# Test features (only enabled during testing)
test = [
    "bevy/bevy_winit"
]

